--- a/backend/ui/src/components/AboutMe/AboutMe.css
+++ b/backend/ui/src/components/AboutMe/AboutMe.css
@@ -11,12 +11,16 @@
 
 .about-me .presentation {
     min-height: 200px;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 400px);
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    /* flex-wrap: wrap; */
 }
 
 .about-me .presentation div {
-    /* min-width: 200px; */
+    /* min-width: 300px; */
+    height: 400px;
     /* display: inline-block; */
-    width: 33%;
+    /* width: 33%; */
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
