--- a/backend/ui/src/index.css
+++ b/backend/ui/src/index.css
@@ -4,8 +4,16 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     position: relative;
+    width: 100vw;
+    height: 100vh;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+
+/* #root {
+    width: 100vw;
+    height: 100vh;
+} */
