Add AboutMe blocks

--- a/backend/ui/src/App.css
+++ b/backend/ui/src/App.css
@@ -22,4 +22,10 @@
     height: 90%;
     max-width: 1240px;
     background: rgba(0, 0, 0, 0.1);
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+.App .Pages .page div {
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
