--- a/backend/ui/src/components/Nav/Nav.css
+++ b/backend/ui/src/components/Nav/Nav.css
@@ -1,6 +1,15 @@
 .App>#navbarNavAltMarkup {
     width: 150px;
     background: rgba(0, 0, 0, .1);
+    z-index: 2000;
+}
+
+.App>#navbarNavAltMarkup button {
+    border: 0;
+}
+
+.App>#navbarNavAltMarkup .nav-item.active {
+    background: rgba(0, 0, 0, .2);
 }
 
 .App>#navbarNavAltMarkup .nav-item {
