--- a/backend/ui/src/components/AboutMe/AboutMe.css
+++ b/backend/ui/src/components/AboutMe/AboutMe.css
@@ -9,18 +9,11 @@
     min-height: 50px;
 }
 
-.about-me .presentation {
-    /* min-height: 200px; */
-    /* display: grid; */
-    /* grid-template-columns: repeat(auto-fit, 400px); */
-    /* grid-template-columns: 1fr 1fr 1fr; */
-    /* flex-wrap: wrap; */
+.about-me {
+    margin-left: 0;
 }
 
-.about-me .presentation div {
-    /* min-width: 300px; */
-    /* height: 400px; */
-    /* display: inline-block; */
-    /* width: 33%; */
-    /* border: 1px solid rgba(0, 0, 0, 0.1); */
+.about-me.about-me--default {
+    transform: scaleX(1) !important;
+    margin-left: -100em;
 }
