--- a/backend/ui/src/components/Contact/Contact.css
+++ b/backend/ui/src/components/Contact/Contact.css
@@ -1,26 +1,8 @@
-.about-me {
-    background: rgba(0, 0, 0, 0.1);
-    width: 100%;
+.contact {
+    margin-left: 0;
 }
 
-.about-me div {
-    background: rgba(0, 0, 0, 0.1);
-    /* width: 100%; */
-    min-height: 50px;
-}
-
-.about-me .presentation {
-    /* min-height: 200px; */
-    /* display: grid; */
-    /* grid-template-columns: repeat(auto-fit, 400px); */
-    /* grid-template-columns: 1fr 1fr 1fr; */
-    /* flex-wrap: wrap; */
-}
-
-.about-me .presentation div {
-    /* min-width: 300px; */
-    /* height: 400px; */
-    /* display: inline-block; */
-    /* width: 33%; */
-    /* border: 1px solid rgba(0, 0, 0, 0.1); */
+.contact.contact--default {
+    transform: scaleX(1) !important;
+    margin-left: -100em;
 }
