--- a/backend/ui/src/components/Portfolio/Portfolio.css
+++ b/backend/ui/src/components/Portfolio/Portfolio.css
@@ -1,3 +1,8 @@
-.portfolio .portfolio--original-state {
-    transform: scaleX(1);
+.portfolio {
+    margin-left: 0;
+}
+
+.portfolio.portfolio--default {
+    transform: scaleX(1) !important;
+    margin-left: -100em;
 }
