--- a/backend/ui/src/components/Contact/Contact.css
+++ b/backend/ui/src/components/Contact/Contact.css
@@ -1,8 +1,8 @@
 .contact {
-    margin-left: 0;
+    margin-top: 0;
 }
 
 .contact.contact--default {
     transform: scaleX(1) !important;
-    margin-left: -100em;
+    margin-top: -100em;
 }
