--- a/backend/ui/src/components/Portfolio/Portfolio.css
+++ b/backend/ui/src/components/Portfolio/Portfolio.css
@@ -1,8 +1,8 @@
 .portfolio {
-    margin-left: 0;
+    margin-top: 0;
 }
 
 .portfolio.portfolio--default {
     transform: scaleX(1) !important;
-    margin-left: -100em;
+    margin-top: 100em;
 }
