Style scrollbar, Fill about me with content

--- a/backend/ui/src/App.css
+++ b/backend/ui/src/App.css
@@ -38,3 +38,8 @@
     transform: scale(0.5);
     transition: all .6s;
 }
+
+.App .text-small {
+    font-size: .8em;
+    /* line-height: 1em; */
+}
