--- a/backend/ui/src/components/AboutMe/AboutMe.css
+++ b/backend/ui/src/components/AboutMe/AboutMe.css
@@ -9,6 +9,10 @@
     min-height: 50px;
 }
 
+.about-me .presentation div {
+    min-height: 2.2em;
+}
+
 .about-me {
     margin-left: 0;
 }
@@ -16,4 +20,17 @@
 .about-me.about-me--default {
     transform: scaleX(1) !important;
     margin-left: 100em;
+}
+
+.about-me .media-icons-container>div {
+    --side: 2em;
+    font-size: 1.2em;
+    margin-right: .3em;
+    width: var(--side);
+    height: var(--side);
+    min-height: var(--side);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
