Add Navbar skeleton

--- a/backend/ui/src/tailwind.css
+++ b/backend/ui/src/tailwind.css
@@ -1,3 +1,115 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.rotate-0 {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+}
+.rotate-p90 {
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+.rotate-p180 {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+}
+.rotate-p135 {
+    -webkit-transform: rotate(135deg);
+    -moz-transform: rotate(135deg);
+    -o-transform: rotate(135deg);
+    transform: rotate(135deg);
+}
+.rotate-p270 {
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    transform: rotate(270deg);
+}
+
+.rotate-m90 {
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+}
+.rotate-m180 {
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+}
+.rotate-m135 {
+    -webkit-transform: rotate(-135deg);
+    -moz-transform: rotate(-135deg);
+    -o-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+}
+.rotate-m270 {
+    -webkit-transform: rotate(-270deg);
+    -moz-transform: rotate(-270deg);
+    -o-transform: rotate(-270deg);
+    transform: rotate(-270deg);
+}
+.transition-300 {
+    -webkit-transition: all .3s ;
+    -moz-transition: all .3s ;
+    -o-transition: all .3s ;
+    transition: all .3s ;
+}
+.transition-600 {
+    -webkit-transition: all .6s ;
+    -moz-transition: all .6s ;
+    -o-transition: all .6s ;
+    transition: all .6s ;
+}
+.transition-300-ease-in-out {
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+.flex-center{
+    @apply flex items-center justify-center;
+}
+.rounded-50{
+    border-radius: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.menu-icon--opened:checked~span:nth-of-type(1){
+    @apply top-p4/10;
+    @apply rotate-p135;
+}
+.menu-icon--opened:checked~span:nth-of-type(2){
+    @apply left-m16;
+    @apply opacity-0;
+}
+.menu-icon--opened:checked~span:nth-of-type(3){
+    @apply top-p4/10;
+    @apply rotate-m135;
+}
