--- a/backend/ui/src/tailwind.css
+++ b/backend/ui/src/tailwind.css
@@ -1,32 +1,34 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
 .rotate-0 {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
 }
+
 .rotate-p90 {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     -o-transform: rotate(90deg);
     transform: rotate(90deg);
 }
+
 .rotate-p180 {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
 }
+
 .rotate-p135 {
     -webkit-transform: rotate(135deg);
     -moz-transform: rotate(135deg);
     -o-transform: rotate(135deg);
     transform: rotate(135deg);
 }
+
 .rotate-p270 {
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
@@ -40,18 +42,21 @@
     -o-transform: rotate(-90deg);
     transform: rotate(-90deg);
 }
+
 .rotate-m180 {
     -webkit-transform: rotate(-180deg);
     -moz-transform: rotate(-180deg);
     -o-transform: rotate(-180deg);
     transform: rotate(-180deg);
 }
+
 .rotate-m135 {
     -webkit-transform: rotate(-135deg);
     -moz-transform: rotate(-135deg);
     -o-transform: rotate(-135deg);
     transform: rotate(-135deg);
 }
+
 .rotate-m270 {
     -webkit-transform: rotate(-270deg);
     -moz-transform: rotate(-270deg);
@@ -59,21 +64,20 @@
     transform: rotate(-270deg);
 }
 
-
-
 @responsive {
-    @variants hover, focus {
+    @variants hover,
+    focus {
         .transition-300 {
-            -webkit-transition: all .3s ;
-            -moz-transition: all .3s ;
-            -o-transition: all .3s ;
-            transition: all .3s ;
+            -webkit-transition: all .3s;
+            -moz-transition: all .3s;
+            -o-transition: all .3s;
+            transition: all .3s;
         }
         .transition-600 {
-            -webkit-transition: all .6s ;
-            -moz-transition: all .6s ;
-            -o-transition: all .6s ;
-            transition: all .6s ;
+            -webkit-transition: all .6s;
+            -moz-transition: all .6s;
+            -o-transition: all .6s;
+            transition: all .6s;
         }
         .transition-300-ease-in-out {
             -webkit-transition: all .3s ease-in-out;
@@ -82,27 +86,28 @@
             transition: all .3s ease-in-out;
         }
     }
-  }
-  @responsive {
-    @variants hover, focus {
-        .flex-center{
+}
+
+@responsive {
+    @variants hover,
+    focus {
+        .flex-center {
             @apply flex items-center justify-center;
         }
-        .rounded-50{
+        .rounded-50 {
             border-radius: 50%;
         }
-        .box-sizing-content{
+        .box-sizing-content {
             box-sizing: content-box;
         }
-        .box-sizing-border{
+        .box-sizing-border {
             box-sizing: border-box;
         }
     }
-  }
+}
 
-
-.bg-anchored{
-    background-color: rgba(0,0,50,0.4);
+.bg-anchored {
+    background-color: rgba(0, 0, 50, 0.4);
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
@@ -110,47 +115,21 @@
     background-blend-mode: overlay;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.menu-icon--opened:checked~span:nth-of-type(1){
-    @apply top-p4\/10;
-    @apply rotate-p135;
-}
-.menu-icon--opened:checked~span:nth-of-type(2){
-    @apply left-m16;
-    @apply opacity-0;
-}
-.menu-icon--opened:checked~span:nth-of-type(3){
-    @apply top-p4\/10;
-    @apply rotate-m135;
-}
-
-
-.scale-border-on-hover{
+.scale-border-on-hover {
     position: relative;
 }
-.scale-border-on-hover.active::after{
+
+.scale-border-on-hover.active::after {
     transform: scaleX(1) !important;
 }
-.scale-border-on-hover::after{
+
+.scale-border-on-hover::after {
     content: "";
     height: auto;
     bottom: 0;
     left: 0;
     right: auto;
-    top:0;
+    top: 0;
     width: 3px;
     transform: scaleY(0);
     position: absolute;
@@ -158,24 +137,26 @@
     @apply bg-gray-200;
     @apply transition-600;
 }
-.scale-border-on-hover:hover::after{
+
+.scale-border-on-hover:hover::after {
     transform: scaleY(1);
     @apply transition-600;
 }
+
 @media (min-width: 768px) {
     .scale-border-on-hover::after {
         height: 3px;
         bottom: 0;
         left: 0;
         right: 0;
-        top:auto;
+        top: auto;
         width: auto;
         transform: scaleX(0);
         @apply bg-gray-700;
         @apply transition-600;
     }
-    .scale-border-on-hover:hover::after{
+    .scale-border-on-hover:hover::after {
         transform: scaleX(1);
         @apply transition-600;
     }
-  }
+}
